added owin functionality register and login

--- a/MasterPage.master
+++ b/MasterPage.master
@@ -21,6 +21,17 @@
                     <li><asp:HyperLink ID="HyperLink2" runat="server" NavigateUrl="~/Pages/About.aspx">About us</asp:HyperLink></li>
                     <li><asp:HyperLink ID="HyperLink3" runat="server">Reports</asp:HyperLink></li>
                     <li><asp:HyperLink ID="HyperLink4" runat="server" NavigateUrl="~/Pages/Management/Management.aspx">Management</asp:HyperLink></li>
+                    
+                    
+                    <li style="float:right">
+                        <asp:HyperLink ID="lnkRegister" NavigateUrl="~/Pages/Account/Register.aspx" runat="server">Register</asp:HyperLink>
+                          <asp:HyperLink ID="litStatus" runat="server"></asp:HyperLink>
+                    </li>
+
+                    <li style="float:right">
+                        <asp:HyperLink ID="lnkLogin" NavigateUrl="~/Pages/Account/Login.aspx" runat="server">Log In</asp:HyperLink>
+                         <asp:LinkButton ID="lnkLogut" runat="server" OnClick="lnkLogut_Click">Log out</asp:LinkButton>
+                    </li>
                 </ul>
             </div>
             <div id="content">
