--- a/Styles/StyleSheet.css
+++ b/Styles/StyleSheet.css
@@ -3,13 +3,25 @@
     font-family: Corbel, Arial, Helvetica, Verdana, sans-serif;
     font-size: 16px;
     background-color: lavender;
-}
+} 
 
 #wrapper {
     width: 1100px;
+    /*set the wrapper to the center of the screen*/
     margin: auto;
+    /*the distance between the end of the wrapper and the backround*/
     padding-bottom: 20px;
     background-color: white;
+
+    /*
+     *add curves to the corners of the web page
+     *3 lines do same thing for browser compatibiltiy    
+     */
+    -moz-border-radius: 25px;
+    -webkit-border-radius: 25px;
+    border-radius: 25px;
+    /*Hide anything that passes over the parent container's border*/
+    overflow: hidden;
 }
 
 #navigation {
