--- a/Styles/StyleSheet.css
+++ b/Styles/StyleSheet.css
@@ -151,3 +151,33 @@ a:visited {
 }
 
 
+/*Shopping Cart Page */
+.CartTable
+{
+    text-align: center;
+    border: 15px solid #f5f4f2;
+    margin-bottom: 10px;
+    width: 100%;
+    padding: 10px;
+}
+
+.CartTable input
+{
+    width: 65px;
+    height: 65px;
+}
+
+.CartTable h4
+{
+    padding: 0;
+    margin: 0;
+}
+
+.CartTable tr td select
+{
+    width: 100px;
+}
+
+
+
+
