--- a/Styles/StyleSheet.css
+++ b/Styles/StyleSheet.css
@@ -2,17 +2,17 @@
     color: #574c3f;
     font-family: Corbel, Arial, Helvetica, Verdana, sans-serif;
     font-size: 16px;
-    background-color: lavender;
+    background-color: grey;
 } 
 
 #wrapper {
-    width: 1100px;
+    width: 1200px;
     /*set the wrapper to the center of the screen*/
     margin: auto;
     /*the distance between the end of the wrapper and the backround*/
     padding-bottom: 20px;
-    background-color: white;
-
+    background-color: lavender;
+ 
     /*
      *add curves to the corners of the web page
      *3 lines do same thing for browser compatibiltiy    
