--- a/MasterPage.master
+++ b/MasterPage.master
@@ -1,9 +1,12 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeFile="MasterPage.master.cs" Inherits="MasterPage" %>
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head runat="server">
-    <title>Garage Manager</title>
+    <meta charset="utf-8" />   
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Garager</title>
+    <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="Styles/StyleSheet.css" type="text/css" />
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -13,7 +16,7 @@
     <div>
         <div id="wrapper">
             <div id="banner">
-                <asp:Image ID="Image1" runat="server" ImageUrl="~/Images/BannerCar.jpg" Width="100%" />
+                <asp:Image ID="Image1" runat="server" ImageUrl="~/Images/BannerCar.jpg" Width="100%"/>
             </div>
             <div id="navigation">
                 <ul id="nav">
@@ -34,13 +37,14 @@
                     </li>
                 </ul>
             </div>
-            <div id="content">
+            <div id="content" class="container-fluid" >
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
             </div>
         </div>
     </div>
     </form>
-
+    <script src="Scripts/bootstrap.min.js"></script>
+    <script src="Scripts/jquery-1.9.1.min.js"></script>
 </body>
 </html>
