--- a/MasterPage.master
+++ b/MasterPage.master
@@ -3,46 +3,137 @@
 <!DOCTYPE html>
 <html lang="en">
 <head runat="server">
-    <meta charset="utf-8" />   
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Garager</title>
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="Styles/StyleSheet.css" type="text/css" />
+
+    <!-- Start WOWSlider.com HEAD section -->
+    <link rel="stylesheet" type="text/css" href="engine1/style.css" />
+    <script type="text/javascript" src="engine1/jquery.js"></script>
+    <!-- End WOWSlider.com HEAD section -->
+
+
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
 <body>
     <form id="form1" runat="server">
-    <div>
-        <div id="wrapper">
-            <div id="banner">
-                <asp:Image ID="Image1" runat="server" ImageUrl="~/Images/BannerCar.jpg" Width="100%"/>
-            </div>
-            <div id="navigation">
-                <ul id="nav">
-                    <li><asp:HyperLink ID="HyperLink1" runat="server" NavigateUrl="~/Index.aspx">Webshop</asp:HyperLink></li>
-                    <li><asp:HyperLink ID="HyperLink2" runat="server" NavigateUrl="~/Pages/About.aspx">About us</asp:HyperLink></li>
-                    <li><asp:HyperLink ID="HyperLink3" runat="server">Reports</asp:HyperLink></li>
-                    <li><asp:HyperLink ID="HyperLink4" runat="server" NavigateUrl="~/Pages/Management/Management.aspx">Management</asp:HyperLink></li>
-                    
-                    
-                    <li style="float:right">
-                        <asp:HyperLink ID="lnkRegister" NavigateUrl="~/Pages/Account/Register.aspx" runat="server">Register</asp:HyperLink>
-                          <asp:HyperLink ID="litStatus" runat="server" NavigateUrl="~/Pages/ShoppingCart.aspx"></asp:HyperLink>
-                    </li>
+        <div>
+            <%-- <div id="navigation">
+                    <ul id="nav">
+                        <li>
+                            <asp:HyperLink ID="HyperLink1" runat="server" NavigateUrl="Index.aspx">Webshop</asp:HyperLink></li>
+                        <li>
+                            <asp:HyperLink ID="HyperLink2" runat="server" NavigateUrl="About.aspx">About us</asp:HyperLink></li>
+                        <li>
+                            <asp:HyperLink ID="HyperLink4" runat="server" NavigateUrl="Management.aspx">Management</asp:HyperLink></li>
 
-                    <li style="float:right">
-                        <asp:HyperLink ID="lnkLogin" NavigateUrl="~/Pages/Account/Login.aspx" runat="server">Log In</asp:HyperLink>
-                         <asp:LinkButton ID="lnkLogut" runat="server" OnClick="lnkLogut_Click">Log out</asp:LinkButton>
-                    </li>
-                </ul>
-            </div>
-            <div id="content" class="container-fluid" >
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-            </asp:ContentPlaceHolder>
+
+                        <li style="float: right">
+                            <asp:HyperLink ID="lnkRegister" NavigateUrl="Register.aspx" runat="server">Register</asp:HyperLink>
+                            <asp:HyperLink ID="litStatus" runat="server" NavigateUrl="ShoppingCart.aspx"></asp:HyperLink>
+                        </li>
+
+                        <li style="float: right">
+                            <asp:HyperLink ID="lnkLogin" NavigateUrl="Login.aspx" runat="server">Log In</asp:HyperLink>
+                            <asp:LinkButton ID="lnkLogut" runat="server" OnClick="lnkLogut_Click">Log out</asp:LinkButton>
+                        </li>
+                    </ul>
+                </div>--%>
+            <nav class="navbar navbar-default navbar-fixed-top">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+
+                        <asp:HyperLink ID="HyperLink6" runat="server" NavigateUrl="Index.aspx" class="navbar-brand">Garager</asp:HyperLink>
+                    </div>
+
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav">
+                            <li class="active">
+                                <asp:HyperLink ID="HyperLink1" runat="server" NavigateUrl="Index.aspx">Garager <span class="sr-only">(current)</span></asp:HyperLink></li>
+                            <li>
+                                <asp:HyperLink ID="HyperLink2" runat="server" NavigateUrl="About.aspx">About us</asp:HyperLink></li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li>
+                                        <asp:HyperLink ID="HyperLink4" runat="server" NavigateUrl="Management.aspx">Management</asp:HyperLink></li>
+                                </ul>
+                            </li>
+                        </ul>
+
+                        <ul class="nav navbar-nav navbar-right">
+                            <li>
+                                <asp:HyperLink ID="lnkRegister" NavigateUrl="Register.aspx" runat="server">Register</asp:HyperLink>
+                                <asp:HyperLink ID="litStatus" runat="server" NavigateUrl="ShoppingCart.aspx"></asp:HyperLink>
+                            </li>
+
+                            <li>
+                                <asp:HyperLink ID="lnkLogin" NavigateUrl="Login.aspx" runat="server">Log In</asp:HyperLink>
+                                <asp:LinkButton ID="lnkLogut" runat="server" OnClick="lnkLogut_Click">Log out</asp:LinkButton>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            <br />
+            <br />
+            <div id="wrapper">
+                <div id="banner">
+                    <!-- Start WOWSlider.com BODY section -->
+                    <div id="wowslider-container1">
+                        <div class="ws_images">
+                            <ul>
+                                <li>
+                                    <img src="data1/images/lamborghinimurccielago.jpg" alt="LAMBORGHINI-MURCCIELAGO" title="LAMBORGHINI-MURCCIELAGO" id="wows1_0" /></li>
+                                <li>
+                                    <img src="data1/images/lamborghini_aventador.jpg" alt="LAMBORGHINI_AVENTADOR" title="LAMBORGHINI_AVENTADOR" id="wows1_1" /></li>
+                                <li>
+                                    <img src="data1/images/camaro.jpg" alt="CAMARO" title="CAMARO" id="wows1_2" /></li>
+                                <li><a href="http://wowslider.com">
+                                    <img src="data1/images/dodgecharger.jpg" alt="wowslider.com" title="DODGE-CHARGER" id="wows1_3" /></a></li>
+                                <li>
+                                    <img src="data1/images/ferrarienzo.jpg" alt="Ferrari-Enzo" title="Ferrari-Enzo" id="wows1_4" /></li>
+                            </ul>
+                        </div>
+                        <div class="ws_bullets">
+                            <div>
+                                <a href="#" title="LAMBORGHINI-MURCCIELAGO"><span>
+                                    <img src="data1/tooltips/lamborghinimurccielago.jpg" alt="LAMBORGHINI-MURCCIELAGO" />1</span></a>
+                                <a href="#" title="LAMBORGHINI_AVENTADOR"><span>
+                                    <img src="data1/tooltips/lamborghini_aventador.jpg" alt="LAMBORGHINI_AVENTADOR" />2</span></a>
+                                <a href="#" title="CAMARO"><span>
+                                    <img src="data1/tooltips/camaro.jpg" alt="CAMARO" />3</span></a>
+                                <a href="#" title="DODGE-CHARGER"><span>
+                                    <img src="data1/tooltips/dodgecharger.jpg" alt="DODGE-CHARGER" />4</span></a>
+                                <a href="#" title="Ferrari-Enzo"><span>
+                                    <img src="data1/tooltips/ferrarienzo.jpg" alt="Ferrari-Enzo" />5</span></a>
+                            </div>
+                        </div>
+                        <div class="ws_script" style="position: absolute; left: -99%"><a href="http://wowslider.com">http://wowslider.com/</a> by WOWSlider.com v8.5</div>
+                        <div class="ws_shadow"></div>
+                    </div>
+                    <script type="text/javascript" src="engine1/wowslider.js"></script>
+                    <script type="text/javascript" src="engine1/script.js"></script>
+                    <!-- End WOWSlider.com BODY section -->
+
+                    <%--   <asp:Image ID="Image1" runat="server" ImageUrl="~/Images/BannerCar.jpg" Width="100%" />--%>
+                </div>
+                <hr />
+                <div id="content" class="container-fluid">
+                    <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                    </asp:ContentPlaceHolder>
+                </div>
             </div>
         </div>
-    </div>
     </form>
     <script src="Scripts/bootstrap.min.js"></script>
     <script src="Scripts/jquery-1.9.1.min.js"></script>
