--- a/Styles/StyleSheet.css
+++ b/Styles/StyleSheet.css
@@ -3,6 +3,7 @@
     font-family: Corbel, Arial, Helvetica, Verdana, sans-serif;
     font-size: 16px;
     background-color: grey;
+    direction: ltr;
 } 
 
 #wrapper {
@@ -16,12 +17,12 @@
     /*
      *add curves to the corners of the web page
      *3 lines do same thing for browser compatibiltiy    
-     */
+     
     -moz-border-radius: 25px;
     -webkit-border-radius: 25px;
     border-radius: 25px;
-    /*Hide anything that passes over the parent container's border*/
-    overflow: hidden;
+    Hide anything that passes over the parent container's border
+    overflow: hidden;*/
 }
 
 #navigation {
@@ -84,11 +85,12 @@ a:visited {
 }
 
 /*Webshop */
-#ContentPlaceHolder1_pnlProducts div {
+#ContentPlaceHolder1_pnlProducts div, table {
     float: left;
     width: 250px;
     height: 250px;
     text-align: center;
+    background-color: lavender;
 }
 
 .productName {
